# ixode-api

./: .env.template  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  deployment.yml  package.json  req-test-output.txt  req-test.js  sample-output.txt  sample-test-output.txt
data/: collection_err_test.txt  collection_ok_test.txt  collections.txt  configs.txt  constraints.txt  constraints_test.txt  data_test.txt  encryption_key.txt  encryption_key_test.txt  events.txt  events_test.txt  mappings.txt  medias.txt  medias_test.txt  projects.txt  projects_test.txt  users.txt  users_test.txt
src/: .main.rs.swp  catchers.rs  data_converter.rs  init.rs  main.rs  redis_connection.rs  utils.rs
src/catchers/: catch_400.rs  catch_401.rs  catch_404.rs  catch_422.rs  catch_500.rs  catchers.rs
src/components/: collection.rs  components.rs  config.rs  constraint.rs  constraint_property.rs  custom_structure.rs  custom_structures.rs  data.rs  datapair.rs  encryption.rs  event.rs  io.rs  mapping.rs  mappings.rs  media.rs  project.rs  raw_pair.rs  structure.rs  structures.rs  user.rs
src/init/: init.rs  init_collection.rs  init_config.rs  init_constraint.rs  init_encryption_key.rs  init_event.rs  init_main.rs  init_mapping.rs  init_media.rs  init_project.rs  init_user.rs
src/middlewares/: cors.rs  midd_cors.rs  midd_token.rs  middlewares.rs  paginate.rs  token.rs
src/routes/: collection.rs  config.rs  custom_structure.rs  data.rs  event.rs  media.rs  misc.rs  project.rs  route_collection.rs  route_config.rs  route_custom_structure.rs  route_data.rs  route_event.rs  route_media.rs  route_misc.rs  route_project.rs  route_routing.rs  route_structure.rs  route_test.rs  route_upload.rs  route_user.rs  route_x.rs  routes.rs  routing.rs  structure.rs  test.rs  upload.rs  user.rs  x.rs
src/tests/: test_collection.rs  test_collections.rs  test_config.rs  test_configs.rs  test_constraint.rs  test_data.rs  test_datapair.rs  test_encryption.rs  test_event.rs  test_mapping.rs  test_mappings.rs  test_media.rs  test_medias.rs  test_project.rs  test_projects.rs  test_user.rs  (+2 more)
templates/: base.html.tera  index.html.tera  wave.html.tera  welcome.html.tera
(+208 files in other folders)
