[package]
name = "kinesis-db"
description = "A secure, portable and fast database written in Rust for Kinesis API"
repository = "https://github.com/EdgeKing810/kinesis-db"
license = "MIT"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "1"
magic-crypt = "3.1.9"
fastrand = "1.5.0"
rust-argon2 = "0.8"
uuid = { version = "0.8", features = ["v4"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4"
jsonwebtoken = "7.2"
lettre = "0.10.0-rc.4"

[profile.release]
lto = true
opt-level = "z"
